force-app/main/default/objects/copadovsm__Filter__c/fields/copadovsm__Owner__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Filters</relationshipName>
    <type>Lookup</type>
</CustomField>