force-app/main/default/objects/copadovsm__Filter__c/fields/copadovsm__Share_With__c.field-meta.xml
<CustomField>
    <fullName>copadovsm__Share_With__c</fullName>
    <label>Share With</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Only me</fullName>
                <default>true</default>
                <label>Only me</label>
            </value>
            <value>
                <fullName>All users</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>